# ucx-rust-sdk

./: .gitignore  Cargo.toml  LICENSE  README.md  README_en.md
.github/workflows/: ci.yml
src/: archive.rs  capabilities.rs  constants.rs  decrypt.rs  error.rs  lib.rs  model.rs
testdata/: author.cert.pem  author.key.pub  expected.json  plain-aesgcm.ucxe  plain-chacha.ucxe  plain-pass.ucxe  sample-signed.ucx  sample.ucx
tests/: conformance.rs
